--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,70 @@
-altair==5.3.0
-asttokens==2.4.1
-atpublic==4.1.0
-attrs==23.2.0
-bidict==0.23.1
-blinker==1.8.2
-cachetools==5.3.3
-certifi==2024.6.2
-charset-normalizer==3.3.2
+altair==5.5.0
+arro3-core==0.4.5
+asttokens==3.0.0
+atpublic==5.0
+attrs==24.3.0
+blinker==1.9.0
+cachetools==5.5.0
+certifi==2024.12.14
+charset-normalizer==3.4.0
 click==8.1.7
 decorator==5.1.1
-duckdb==0.10.3
-executing==2.0.1
+duckdb==1.1.3
+executing==2.1.0
 gitdb==4.0.11
 GitPython==3.1.43
-ibis-framework==9.0.0
-idna==3.7
-ipython==8.25.0
-jedi==0.19.1
+ibis==3.3.0
+ibis-framework==9.5.0
+idna==3.10
+ipython==8.31.0
+jedi==0.19.2
 Jinja2==3.1.4
-jsonpickle==3.2.1
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
+jsonpickle==4.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-networkx==3.3
-numpy==1.26.4
-packaging==24.1
-pandas==2.2.2
+narwhals==1.19.0
+networkx==3.4.2
+numpy==2.2.0
+packaging==24.2
+pandas==2.2.3
 parso==0.8.4
 parsy==2.1
 pexpect==4.9.0
-pillow==10.3.0
-prompt_toolkit==3.0.46
-protobuf==4.25.3
-psutil==5.9.8
+pillow==11.0.0
+prompt_toolkit==3.0.48
+protobuf==5.29.2
 ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==16.1.0
+pure_eval==0.2.3
+pyarrow==17.0.0
 pyarrow-hotfix==0.6
 pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
-pytz==2024.1
+pytz==2024.2
 pyvis==0.3.2
 referencing==0.35.1
 requests==2.32.3
-rich==13.7.1
-rpds-py==0.18.1
-six==1.16.0
+rich==13.9.4
+rpds-py==0.22.3
+setuptools==75.6.0
+six==1.17.0
 smmap==5.0.1
-sqlglot==23.12.2
+sqlglot==25.20.2
 stack-data==0.6.3
-streamlit==1.35.0
-tenacity==8.3.0
+streamlit==1.41.1
+tenacity==9.0.0
 toml==0.10.2
 toolz==0.12.1
-tornado==6.4.1
+tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.1
-vegafusion==1.6.9
-vegafusion-python-embed==1.6.9
-vl-convert-python==1.4.0
-watchdog==4.0.1
+tzdata==2024.2
+urllib3==2.2.3
+vegafusion==2.0.1
+watchdog==6.0.0
 wcwidth==0.2.13
+wheel==0.45.1
